<resources>
    <string name="app_name">Todo List</string>
    <string name="T">T</string>
    <string name="O">O</string>
    <string name="D">D</string>
    <string name="L">L</string>
    <string name="I">I</string>
    <string name="S">S</string>
    <string name="slogan">HLA Developers</string>
    <string name="frag1">Task Todo</string>
    <string name="frag2">Reach Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="umair">Umair Shabbir</string>
    <string name="awais">Awais</string>
    <string name="huzaifa">Huzaifa</string>
    <string name="todoSlogan">Tasks Todo</string>
    <string name="newTask">New Task</string>
    <string name="addTaskBtnTxt">Save</string>
    <string name="add_task_button">Add task button</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name_hint">Full Name</string>
    <string name="forget">forgot password?</string>
    <string name="pass_hint">Password</string>
    <string name="delete_task">Delete Task button</string>
    <string name="logout">Logout</string>
    <string name="cpass_hint">Confirm Password</string>
    <string name="user_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="logo">App Logo</string>


</resources>