<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"

    android:background="@color/chat_background">


    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        >

        <ImageView
            android:layout_marginTop="50dp"
            android:id="@+id/logoimage"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/todo_logo"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/todo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/T"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo2"
            android:text="@string/O"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />

        <TextView
            android:id="@+id/todo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/D"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo4"
            android:text="@string/O"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo5"
            android:text="@string/L"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo6"
            android:text="@string/I"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo7"
            android:text="@string/S"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo8"
            android:text="@string/T"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="cursive"
            />
    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:text="@string/slogan"
            android:id="@+id/slogan"

            android:textSize="20sp" />


    </RelativeLayout>


</LinearLayout>