<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks_todo_frag">

    <!-- Todo Slogan TextView -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cont"
    >
    <TextView
        android:id="@+id/todoSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todoSlogan"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toEndOf="@+id/todoSlogan"
        android:text="@string/logout"
        android:backgroundTint="@color/chat_background"
        android:layout_margin="10dp"
        />
</LinearLayout>

    <!-- RecyclerView to display tasks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cont"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:nestedScrollingEnabled="true" />

    <!-- FloatingActionButton to add a new task -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/grayBackground"
        android:src="@drawable/baseline_add_task_24"
        android:contentDescription="@string/add_task_button"
        app:fabSize="normal"
        tools:ignore="SpeakableTextPresentCheck" />

    <include layout="@layout/form_layout"/>
</RelativeLayout>
